front: avoid horizontal scroll on editor panel
fix #7320

--- a/front/src/styles/scss/applications/editor/_editor.scss
+++ b/front/src/styles/scss/applications/editor/_editor.scss
@@ -111,6 +111,7 @@
     width: 400px;
     height: 100%;
     overflow-y: auto;
+    overflow-x: hidden;
   }
 
   .nav-box {
